Added a search bar on main page

--- a/src/campus-pins.html
+++ b/src/campus-pins.html
@@ -1,5 +1,28 @@
 
 <!DOCTYPE html>
 <html lang="en" style="overflow-y: scroll">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+	<title>Campus Pins</title>
 
+	<!-- CSS  -->
+  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+</head>
+
+<body>
+	<nav>
+	    <div class="nav-wrapper">
+	      <form>
+	        <div class="input-field">
+	          <input id="search" type="search" required>
+	          <label for="search"><i class="material-icons">search</i></label>
+	          <i class="material-icons">close</i>
+	        </div>
+	      </form>
+	    </div>
+	  </nav>
+</body>
 </html>
