--- a/src/campus-pins.html
+++ b/src/campus-pins.html
@@ -3,14 +3,11 @@
 <html lang="en" style="overflow-y: scroll">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 	<title>Campus Pins</title>
 
 	<!-- CSS  -->
-	<!--Import Google Icon Font-->
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  	<!--Import materialize.css-->
   	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
@@ -18,26 +15,26 @@
 <body>
 	<header>
 		<nav>
-	    <div class="nav-wrapper">
-	      <a href="#" class="brand-logo">Campus Pins</a>
-	      <ul id="nav-mobile" class="right hide-on-med-and-down">
-	        <li><a href="sass.html">Sass</a></li>
-	        <li><a href="badges.html">Components</a></li>
-	        <li><a href="collapsible.html">JavaScript</a></li>
-	      </ul>
-	    </div>
-
-	    <ul id="slide-out" class="side-nav">
-	      <li><a href="#!">First Sidebar Link</a></li>
-	      <li><a href="#!">Second Sidebar Link</a></li>
-	    </ul>
-	    <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
+		    <div class="nav-wrapper">
+		      <a href="#" class="brand-logo">Campus Pins</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="campus-pins.html">Places</a></li>
+		        <li><a href="campus-pins.html">Events</a></li>
+		        <li><a href="campus-pins.html">About</a></li>
+		      </ul>
+		      <form class="red lighten-3">
+        	  	<div class="input-field">
+		        <input id="search" type="search"/>
+		        <label for="search"><i class="mdi-action-search"></i></label><i class="mdi-navigation-close close"></i>
+		        </div>
+		      </form>
+		    </div>
+	  	</nav>
 	</header>
 
 	<!--  Scripts-->
-	<!--Import jQuery before materialize.js-->
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script src="js/materialize.js"></script>
-	<script src="js/init.js"></script>
+  	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  	<script src="js/materialize.js"></script>
+  	<script src="js/index.js"></script>
 </body>
 </html>
