Added function to set boundaries aroundt the campus

--- a/src/test.html
+++ b/src/test.html
@@ -18,8 +18,8 @@
         <div id="map">
 
         </div>
-        <script src="./js/testMap.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCh9zVcwHD7PahyKLJODaEvmWNnWL8T68&callback=initMap" async defer></script>
+        <script type="text/javascript" src="./js/testMap.js"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCh9zVcwHD7PahyKLJODaEvmWNnWL8T68&callback=initMap" async defer></script>
     </body>
 
 </html>
