Renamed map, added IDE files to .gitignore

--- a/src/test.html
+++ b/src/test.html
@@ -18,7 +18,7 @@
         <div id="map">
 
         </div>
-        <script type="text/javascript" src="./js/testMap.js"></script>
+        <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCh9zVcwHD7PahyKLJODaEvmWNnWL8T68&callback=initMap" async defer></script>
     </body>
 
