End of hackathon

--- a/src/campus-pins.html
+++ b/src/campus-pins.html
@@ -14,27 +14,35 @@
 
 <body>
 	<header>
-		<nav>
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Campus Pins</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="campus-pins.html">Places</a></li>
-		        <li><a href="campus-pins.html">Events</a></li>
-		        <li><a href="campus-pins.html">About</a></li>
-		      </ul>
-		      <form class="red lighten-3">
-        	  	<div class="input-field">
-		        <input id="search" type="search"/>
-		        <label for="search"><i class="mdi-action-search"></i></label><i class="mdi-navigation-close close"></i>
-		        </div>
-		      </form>
-		    </div>
-	  	</nav>
+	<nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo"><i class="material-icons">person_pin</i>Campus Pins</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Refresh</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Refresh</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
 	</header>
+	<div class="map-container">
+		<div id="map"></div>
+	</div>
 
 	<!--  Scripts-->
   	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  	<!-- <script>$( document ).ready(function(){
+  			$(".button-collapse").sideNav();
+  		})</script> -->
   	<script src="js/materialize.js"></script>
-  	<script src="js/index.js"></script>
+  	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpaWjS_4NEiQNjMdqNdWbxG_CyRaOOsTc&callback=initMap"
+    async defer></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
+  	<script src="js/init.js"></script>
 </body>
 </html>
